# e2p-fileflags

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs
