[package]
authors = ["Michael Lass <bevan@bi-co.net>"]
categories = ["filesystem", "os::unix-apis"]
description = "Read and set ext2/ext3/ext4/btrfs/xfs/f2fs file flags like with lsattr and chattr from e2fsprogs"
edition = "2018"
homepage = "https://github.com/michaellass/fileflags/"
keywords = ["e2fsprogs", "e2fslibs", "lsattr", "chattr", "ext"]
license = "MIT"
name = "fileflags"
publish = false
readme = "README.md"
repository = "https://github.com/michaellass/fileflags.git"
version = "0.1.0"

[dependencies]
bitflags = "1.1.0"
e2p-sys = { version= "0.1.0", git = "https://github.com/michaellass/e2p-sys.git" }
nix = "0.14.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
