[package]
authors = ["Michael Lass <bevan@bi-co.net>"]
build = "build.rs"
categories = ["filesystem", "os::unix-apis"]
description = "Read and set ext2/ext3/ext4/btrfs/xfs/f2fs file flags like with lsattr and chattr from e2fsprogs"
edition = "2021"
homepage = "https://github.com/michaellass/e2p-fileflags/"
keywords = ["e2fsprogs", "e2fslibs", "lsattr", "chattr", "ext"]
license = "MIT"
name = "e2p-fileflags"
publish = false
readme = "README.md"
repository = "https://github.com/michaellass/e2p-fileflags.git"
version = "0.1.0"

[badges]
travis-ci = { repository = "michaellass/e2p-fileflags", branch = "master" }

[build-dependencies]
e2p-sys = { version= "0.1.0", git = "https://github.com/michaellass/e2p-sys.git" }

[dependencies]
bitflags = "^2.0.0"
e2p-sys = { version= "0.1.0", git = "https://github.com/michaellass/e2p-sys.git" }
serde = { version = "^1.0.115", optional = true, features = ["derive"] }
